Added generation of RBAC role bindings from domain files.