@@ -37,36 +37,36 @@ public class MdsClientIT {
         final FeaturesDescription features = client.features();
         printFeatureSummary(features);
 
-        System.out.println(client.getClusters());
+       // System.out.println(client.getClusters());
 
-        System.out.println(client.roles());
-        System.out.println(client.roles("ClusterAdmin"));
-        System.out.println(client.roleNames());
-        final Scope kafkaScope = Scope.forClusterId(kafkaClusterId);
-
-        System.out.println(client.roleNamesForPrincipal("User:charlie", kafkaScope));
-//        assertEquals(Collections.singleton("SystemAdmin"), client.roleNamesForPrincipal("User:charlie", kafkaScope));
-
-        client.bindClusterRole("User:charlie", "ClusterAdmin", kafkaScope);
-//        assertEquals(Set.of("SystemAdmin", "ClusterAdmin"), client.roleNamesForPrincipal("User:charlie", kafkaScope));
-
-        client.unbindClusterRole("User:charlie", "ClusterAdmin", kafkaScope);
-//        assertEquals(Set.of("SystemAdmin"), client.roleNamesForPrincipal("User:charlie", kafkaScope));
-
-
-//        client.addBinding("User:fred", "ResourceOwner", kafkaScope,
+//        System.out.println(client.roles());
+//        System.out.println(client.roles("ClusterAdmin"));
+//        System.out.println(client.roleNames());
+//        final Scope kafkaScope = Scope.forClusterId(kafkaClusterId);
+//
+//        System.out.println(client.roleNamesForPrincipal("User:charlie", kafkaScope));
+////        assertEquals(Collections.singleton("SystemAdmin"), client.roleNamesForPrincipal("User:charlie", kafkaScope));
+//
+//        client.bindClusterRole("User:charlie", "ClusterAdmin", kafkaScope);
+////        assertEquals(Set.of("SystemAdmin", "ClusterAdmin"), client.roleNamesForPrincipal("User:charlie", kafkaScope));
+//
+//        client.unbindClusterRole("User:charlie", "ClusterAdmin", kafkaScope);
+////        assertEquals(Set.of("SystemAdmin"), client.roleNamesForPrincipal("User:charlie", kafkaScope));
+//
+//
+////        client.addBinding("User:fred", "ResourceOwner", kafkaScope,
+////                List.of(new ResourcePattern("Topic", "test-2", "PREFIXED")));
+//        client.removeBinding("User:fred", "ResourceOwner", kafkaScope,
 //                List.of(new ResourcePattern("Topic", "test-2", "PREFIXED")));
-        client.removeBinding("User:fred", "ResourceOwner", kafkaScope,
-                List.of(new ResourcePattern("Topic", "test-2", "PREFIXED")));
-
-
-
-        System.out.println(client.bindingsForPrincipal("User:fred", kafkaScope));
+//
+//
+//
+//        System.out.println(client.bindingsForPrincipal("User:fred", kafkaScope));
 
 //        final var roles = client.roles();
 //
-//        final var objectWriter = new ObjectMapper().writerWithDefaultPrettyPrinter();
-//        System.out.println(objectWriter.writeValueAsString(roles));
+        final var objectWriter = new ObjectMapper().writerWithDefaultPrettyPrinter();
+        System.out.println(objectWriter.writeValueAsString(client.getClusters()));
     }
 
 }
